--- a/src/sass/_pickSection.scss
+++ b/src/sass/_pickSection.scss
@@ -1,6 +1,3 @@
-$pickSection_box_shadow: 0.1rem 0.1rem 0.5rem 0 black;
-$pickSection_box_shadow_elevate: 0.3rem 0.3rem 0.3rem 0 black;
-
 @keyframes pickSection_findMatch_button_animation_clicked {
   0% {
     transform: translateY(1rem);
@@ -192,7 +189,7 @@ $pickSection_box_shadow_elevate: 0.3rem 0.3rem 0.3rem 0 black;
     }
   }
   &_findMatch {
-    -webkit-transition: transform 0.1s 0s;
+    transition: transform 0.1s 0s;
     grid-area: pickSection_findMatch_button;
     &_button {
       width: 20rem;
@@ -202,7 +199,7 @@ $pickSection_box_shadow_elevate: 0.3rem 0.3rem 0.3rem 0 black;
       border: 0;
       font-size: 3rem;
       font-family: $font-special;
-      -webkit-transition: 0.2s 0s;
+      transition: 0.2s 0s;
       &:focus {
         outline: 0;
         animation: pickSection_findMatch_button_animation_clicked 1s;
