--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -7,6 +7,8 @@ $color-background-majority: #232325;
 
 $color-scrollbar-background: #27282b;
 
+$color-unhovered-item: #a4a4a4;
+
 // FONT VARIABLES
 $font-primary: "Nunito", sans-serif;
 $font-display: "Josefin Sans", sans-serif;
