--- a/src/sass/LoginPage.scss
+++ b/src/sass/LoginPage.scss
@@ -1,4 +1,4 @@
-@import "./base";
+@import "./base.scss";
 
-@import "./navbar";
-@import "./loginSection";
+@import "./navbar.scss";
+@import "./loginSection.scss";
