--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -82,3 +82,13 @@ body {
     "loginSection loginSection loginSection loginSection"
     "footer footer footer footer";
 }
+
+.signupPage__container {
+  display: grid;
+  grid-template-rows: 10vh 80vh 10vh;
+  grid-template-columns: repeat(auto-fit, minmax(2rem, 1fr));
+  grid-template-areas:
+    "navBar navBar navBar navBar"
+    "signupSection signupSection signupSection signupSection"
+    "footer footer footer footer";
+}
